<resources>
    <string name="app_name">Robins des Mers</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="adresse_mail">Adresse mail *</string>
    <string name="mot_de_passe">Mot de passe *</string>
    <string name="m_moire_de_poisson_rouge">Mémoire de poisson rouge ?</string>
    <string name="se_souvenir_de_moi">Se souvenir de moi</string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="home">Home</string>
    <string name="mission">Mission</string>
    <string name="map">Carte</string>
    <string name="info">Info</string>
    <string name="profile">Profil</string>
    <string name="title_activity_maps">Map</string>
    <string name="un_d_chet_seul">Un déchet seul</string>
    <string name="un_amas_de_d_chets">Un amas de déchets</string>
    <string name="un_lieu_de_collecte">Un lieu de collecte</string>
    <string name="bouteille_plastique">Bouteille plastique</string>
    <string name="bouteilles_plastique">Bouteilles plastique</string>
    <string name="autre_plastique">Autre plastique</string>
    <string name="autres_plastique">Autres plastique</string>
    <string name="m_tal">Métal</string>
    <string name="m_got">Mégot</string>
    <string name="carton">Carton</string>
    <string name="cartons">Cartons</string>
    <string name="retour_carte">Retour Carte</string>
    <string name="envoyer">Envoyer</string>
    <string name="benne_de_revalorisation">Benne de revalorisation </string>
    <string name="poubelle_de_tri"> Poubelle de Tri </string>
    <string name="decheterie">Décheterie </string>
    <string name="dechet">Déchet</string>
    <string name="dechet_seul">Déchet seul</string>
    <string name="amas_de_dechets">Amas de déchets</string>
    <string name="point_de_collecte">Point de collecte</string>
    <string name="bouteille">Bouteille plastique</string>
    <string name="metaux">Métaux</string>
    <string name="verre">Verre</string>
    <string name="verres">Verres</string>
    <string name="bouteilles">Bouteilles</string>
    <string name="dechets_en_verre">Déchets en verre</string>
    <string name="dechets_en_plastique">Déchets en plastique</string>
    <string name="poubelle_classique">Poubelle classique </string>
    <string name="d_cheterie">Décheterie</string>
    <string name="inscription">Inscription</string>
    <string name="date_de_naissance">Date de naissance *</string>
    <string name="personnalisation">Personnalisation</string>
    <string name="ton_departement">Ton département</string>
    <string name="hyphen">-</string>
    <string name="ton_rang">Ton rang *</string>
    <string name="navigateur">Navigateur</string>
    <string name="citoyen">Citoyen</string>
    <string name="descCitoyen">Tu es citoyen de la terre, la navigation c\'est pas ton truc ? \n Tous dans le même bateau !</string>
    <string name="descNavigateur">Navigateur du dimanche, ou affranchi ? \n Bienvenue à bord !</string>
    <string name="descEcosysteme">Association, entreprise de revalorisation, collectivité, autre initiative? \n Bienvenue, une belle collaboration commence !</string>
    <string name="ecosysteme">Ecosystème</string>
    <string name="mes_informations">Mes informations</string>
    <string name="description">Description</string>
    <string name="recycling_info_description">Here you can enter the Item Recycling Info Description</string>
    <string name="recycling_info_title">Item Recycling Info Title</string>
    <string name="understand">Comprendre</string>
    <string name="symboles">ces symboles sont importants,</string>
    <string name="recognise">apprenons à bien les reconnaître</string>
    <string name="mobius_description_paragraph1">C\'est le symbole universel du recyclage. Les produits qui l\'arborent, ou leur emballage, sont recyclables. Néanmoins, ils seront recyclés si le système de collecte ou la filière du recyclage existe et si les consignes de tri sont correctement respectées.</string>
    <string name="mobius_description_paragraph2"><![CDATA[ Attention : si vous voyez un chiffre à l’intérieur du symbole, il indique seulement la quantité de matières recyclées utilisées pour fabriquer votre produit.]]></string>
    <string name="mobius_title"><![CDATA[Le ruban de Möbius : c’est recyclable!]]></string>
    <string name="triman_description"><![CDATA[Ce symbole indique que votre emballage doit être jeté dans la poubelle de tri ou rapporté dans un point de collecte pour qu’il puisse être recyclé. Le symbole Triman n’apparait pas encore sur tous les emballages concerné donc attention, l’absence de logo ne veut pas dire que le déchet n’est pas recyclable. Un doute ? rdv sur www.quefairedemesdechets.fr]]></string>
    <string name="triman_title"><![CDATA[Le Triman : C’est recyclable !]]></string>
    <string name="poubelle_barree_title"><![CDATA[La poubelle barrée : magasin ou déchetterie !]]></string>
    <string name="poubelle_barree_description">Ce symbole est présent sur vos produits électriques et électroniques, les lampes, les piles…</string>
    <string name="poubelle_barree_description2"><![CDATA[Ces produits ne doivent pas être jetés dans la poubelle des déchets ménagers : il faut les rapporter en magasin ou dans une déchetterie.]]></string>
    <string name="tidyman_title"><![CDATA[Le Tidy man : à ne pas confondre avec le triman !]]></string>
    <string name="tidyman_description">Ce symbole vous incite juste à jeter le déchet dans une poubelle. Ce n’est pas un symbole de tri, ne pas confondre avec le triman.</string>
    <string name="point_vert_title"><![CDATA[Le Point Vert : on se trompe souvent !]]></string>
    <string name="point_vert_description">Ce symbole ne signifie pas que le produit est recyclable. Il veut simplement dire que l’entreprise verse une contribution à un organisme chargé du recyclage.</string>
    <string name="le_point_de_collecte_n_est_plus_pr_sent">Le point de collecte n\'est plus présent</string>
    <string name="score_utilisateur">Score Utilisateur</string>
    <string name="choisis_ton_avatar">Choisis ton avatar</string>
    <string name="recycler">Le Recyclage</string>
    <string name="securite">La sécurité</string>
    <string name="a_propos">La communauté</string>
    <string name="en_savoir_plus_sur">En savoir plus sur</string>
    <string name="gants">Utiliser des gants anti-coupure.</string>
    <string name="chaussure">Porter vos chaussures lors de la collecte.</string>
    <string name="objDangereux">Ne récupérez pas les déchets dangereux (produits chimiques, seringues, objets coupants ou non identifiés.</string>
    <string name="danger">Ne collectez pas dans des zones inaccessibles ou difficiles d\'accès et sans visibilité.</string>
    <string name="circulation">Respectez les règles de circulation.</string>
    <string name="lieuPublic">Restez sur les lieux publics, ne faites pas d\'actions de collecte sur des zones privées.</string>
    <string name="enfant">Les enfants doivent être accompagnés d\'un adulte.</string>
    <string name="poids">Ne pas récupérer les déchets trop lourds.</string>
    <string name="mains">Lavez-vous les mains après la collecte.</string>
    <string name="consignes_de_s_curit_pour_la_collecte_de_d_chets">Consignes de sécurité pour la collecte de déchets</string>
    <string name="vous_voulez_participer_la_r_duction_des_d_chets_sauvages_en_mer_en_les_collectant">Vous voulez participer à la réduction des déchets sauvages en mer en les collectant ?</string>
    <string name="merci_pour_votre_engagement">Merci pour votre engagement !!!</string>
    <string name="avant_de_vous_lancer_voici_quelques_consignes_de_s_curit">Avant de vous lancer, voici quelques consignes de sécurité :</string>
    <string name="pour_la_collecte">Pour la collecte :</string>
    <string name="pour_jeter_vos_d_chets">Pour jeter vos déchets :</string>
    <string name="inviter_mes_contacts">Inviter mes contacts</string>
    <string name="tu_as_re_u_une_invitation">Tu as reçu une invitation!</string>
    <string name="le_lien_deep_link_n_est_pas_configur">Le lien Deep Link n\'est pas configuré.</string>
    <string name="l_identification_n_est_pas_configur_e">L\'identification n\'est pas configurée</string>
    <string name="info_jeter_dechets">Jetez vos déchets dans les poubelles publiques ou des structures dédiées accessibles au public.</string>
    <string name="info_heure_ouverture">Respectez les heures d\'ouvertures des déchetteries et entreprises de revalorisation.</string>
    <string name="info_laver_mains">Lavez-vous les mains après avoir jeté les déchets</string>
    <string name="invite_tes_amis">Invite tes amis à rejoindre la communauté</string>
    <string name="rejoindre_la_communaute">Salut! J\'ai découvert cette super communauté et je t\'invite à la rejoindre</string>
    <string name="url_logo_google">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="qui_sommes_nous">Qui sommes-nous ?</string>
    <string name="robins_des_mers">Robins des Mers</string>
    <string name="c_est_la_communaut_des_navigateurs_et_des_citoyens_engag_s_dans_la_r_duction_des_d_chets_en_mer">C\'est LA communauté des navigateurs et des citoyens engagés dans la réduction des déchets en mer.</string>
    <string name="nos_missions">Nos missions :</string>
    <string name="vous_permettre">Vous permettre :</string>
    <string name="de_mieux_comprendre_la_r_alit_des_d_chets_en_mer">- de mieux comprendre la réalité des déchets en mer.</string>
    <string name="de_faire_partie_d_une_communaut_engag_e">- de faire partie d\'une communauté engagée.</string>
    <string name="d_agir_pour_collecter_et_revaloriser_les_d_chets_flottants_sur_l_ensemble_des_voies_navigables_de_la_ville_la_mer">- d\'agir pour collecter et revaloriser les déchets flottants sur l\'ensemble des voies navigables de la ville à la mer.</string>
    <string name="retrouvez_nous_sur">Retrouvez-nous sur :</string>
    <string name="url_rdm">http://www.robinsdesmers.fr</string>
    <string name="facebook_url">https://www.facebook.com/groups/robinsdesmers/</string>
    <string name="url_insta">https://www.instagram.com/robinsdesmers/</string>
    <string name="url_twitter">https://twitter.com/RobinsDesmers</string>
    <string name="on_connection_failed">onConnectionFailed:</string>
    <string name="erreur_google">erreur des services de Google Play</string>
    <string name="url_oessit">https://play.google.com/store/apps/details?id=fr.wildcodeschool.metro</string>
    <string name="installer">Installer</string>
    <string name="onActivityResult">onActivityResult: requestCode=%d, resultCode=%d</string>
    <string name="on_connection_failed2">onConnectionFailed%s</string>
    <string name="invitation_envoyées">%s invitations envoyées</string>
    <string name="envoi_echoué">L\'envoi des invitations a échoué</string>
    <string name="found_referral">Found Referral: %s:%s</string>
    <string name="deep_link">Deep Link : %s</string>
    <string name="invitation">Invitation: %s</string>
    <string name="que_voulez_vous_d_clarer">Que voulez-vous déclarer?</string>
    <string name="est_collect">est collecté</string>
    <string name="d_chetterie">Déchetterie</string>
    <string name="autres">Autres</string>
    <string name="autre">Autre</string>
    <string name="canettes">Canettes</string>
    <string name="recyclable">Recyclable</string>
    <string name="classique">Classique</string>
    <string name="quel_type_de_tri">Quel type de tri ?</string>
    <string name="tissus">Tissus</string>
    <string name="modification">Modification du profil</string>
    <string name="adresse_mail_modif">Adresse mail</string>
    <string name="nom_dutilisateur">Nom d\'utilisateu</string>
    <string name="prenom_modif">Prénom</string>
    <string name="mot_de_passe_modif">Mot de passe</string>
    <string name="nom_modif">Nom</string>
</resources>