<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_mission"
        android:enabled="true"
        android:icon="@drawable/icon_mission"
        android:title="@string/mission" />

    <item
        android:id="@+id/navigation_carte"
        android:enabled="true"
        android:icon="@drawable/icon_map"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_info"
        android:enabled="true"
        android:icon="@drawable/icon_info"
        android:title="@string/info" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile" />

</menu>
